infra/k8s/base/portal-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portal-web
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
